@@ -29,6 +29,7 @@ import org.apache.roller.weblogger.config.WebloggerConfig;
 import org.apache.roller.weblogger.pojos.WeblogEntry;
 import org.apache.roller.weblogger.pojos.Weblog;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.roller.weblogger.WebloggerException;
 import org.apache.roller.weblogger.business.plugins.comment.WeblogEntryCommentPlugin;
 import org.apache.roller.weblogger.pojos.WeblogEntryComment;
 import org.apache.roller.weblogger.util.HTMLSanitizer;
@@ -39,13 +40,13 @@ import org.apache.roller.weblogger.util.HTMLSanitizer;
  */
 public class PluginManagerImpl implements PluginManager {
     
-    private static Log log = LogFactory.getLog(PluginManagerImpl.class);
+    private static final Log log = LogFactory.getLog(PluginManagerImpl.class);
     
     // Plugin classes keyed by plugin name
-    static Map<String, Class> mPagePlugins = new LinkedHashMap<>();
+    static Map<String, Class<? extends WeblogEntryPlugin>> mPagePlugins = new LinkedHashMap<>();
     
     // Comment plugins
-    private List<WeblogEntryCommentPlugin> commentPlugins = new ArrayList<>();
+    private final List<WeblogEntryCommentPlugin> commentPlugins = new ArrayList<>();
     
     
     /**
@@ -72,13 +73,15 @@ public class PluginManagerImpl implements PluginManager {
      */
     @Override
     public Map<String, WeblogEntryPlugin> getWeblogEntryPlugins(Weblog website) {
+        
         Map<String, WeblogEntryPlugin> ret = new LinkedHashMap<>();
-        for (Class pluginClass : PluginManagerImpl.mPagePlugins.values()) {
+        
+        for (Class<? extends WeblogEntryPlugin> pluginClass : mPagePlugins.values()) {
             try {
-                WeblogEntryPlugin plugin = (WeblogEntryPlugin)pluginClass.newInstance();
+                WeblogEntryPlugin plugin = pluginClass.getDeclaredConstructor().newInstance();
                 plugin.init(website);
                 ret.put(plugin.getName(), plugin);
-            } catch (Exception e) {
+            } catch (ReflectiveOperationException | WebloggerException e) {
                 log.error("Unable to init() PagePlugin: ", e);
             }
         }
@@ -163,19 +166,18 @@ public class PluginManagerImpl implements PluginManager {
                     log.debug("try " + plugin);
                 }
                 try {
-                    Class pluginClass = Class.forName(plugin);
-                    if (isPagePlugin(pluginClass)) {
-                        WeblogEntryPlugin weblogEntryPlugin = (WeblogEntryPlugin)pluginClass.newInstance();
+                    Class<?> clazz = Class.forName(plugin);
+                    
+                    if (isPagePlugin(clazz)) {
+                        @SuppressWarnings("unchecked")
+                        Class<? extends WeblogEntryPlugin> pluginClass = (Class<? extends WeblogEntryPlugin>)clazz;
+                        WeblogEntryPlugin weblogEntryPlugin = pluginClass.getDeclaredConstructor().newInstance();
                         mPagePlugins.put(weblogEntryPlugin.getName(), pluginClass);
                     } else {
-                        log.warn(pluginClass + " is not a PagePlugin");
+                        log.warn(clazz + " is not a PagePlugin");
                     }
-                } catch (ClassNotFoundException e) {
-                    log.error("ClassNotFoundException for " + plugin);
-                } catch (InstantiationException e) {
-                    log.error("InstantiationException for " + plugin);
-                } catch (IllegalAccessException e) {
-                    log.error("IllegalAccessException for " + plugin);
+                } catch (ReflectiveOperationException e) {
+                    log.error("unable to create " + plugin);
                 }
             }
         }
@@ -196,42 +198,27 @@ public class PluginManagerImpl implements PluginManager {
                 log.debug("trying " + plugins[i]);
                 
                 try {
-                    Class pluginClass = Class.forName(plugins[i]);
-                    WeblogEntryCommentPlugin plugin = 
-                            (WeblogEntryCommentPlugin) pluginClass.newInstance();
+                    WeblogEntryCommentPlugin plugin = (WeblogEntryCommentPlugin) Class.forName(plugins[i]).getDeclaredConstructor().newInstance();
                     
                     // make sure and maintain ordering
                     commentPlugins.add(i, plugin);
                     
                     log.debug("Configured comment plugin: "+plugins[i]);
                     
-                } catch (ClassCastException e) {
-                    log.error("ClassCastException for " + plugins[i]);
-                } catch (ClassNotFoundException e) {
-                    log.error("ClassNotFoundException for " + plugins[i]);
-                } catch (InstantiationException e) {
-                    log.error("InstantiationException for " + plugins[i]);
-                } catch (IllegalAccessException e) {
-                    log.error("IllegalAccessException for " + plugins[i]);
+                } catch (ReflectiveOperationException e) {
+                    log.error("unable to create " + plugins[i]);
                 }
             }
         }
         
     }
     
-    
-    private static boolean isPagePlugin(Class pluginClass) {
-        Class[] interfaces = pluginClass.getInterfaces();
-        if (interfaces != null) {
-            for (Class clazz : interfaces) {
-                if (clazz.equals(WeblogEntryPlugin.class)) {
-                    return true;
-                }
-            }
-        }
+    private static boolean isPagePlugin(Class<?> clazz) {
+        for (Class<?> inter : clazz.getInterfaces())
+            if (inter.equals(WeblogEntryPlugin.class))
+                return true;
         return false;
     }
-    
     
     @Override
     public void release() {
